# MyLangChainProject

./: .gitignore  pyproject.toml
src/db/cafe_db/: index.faiss  index.pkl
src/mylangchain_app/00Basic/: 000Groq_연동_basic.ipynb  001_LLMChain생성.ipynb  002_PromptTemplate종류.ipynb  003-1_PydanticParser.ipynb  003-2_StructuredParser.ipynb  003-3_DatetimeParser.ipynb  003-4_EnumParser.ipynb  003_OutPutParser종류.ipynb  004_Model_Parameter.ipynb  005_ChatUpstage 활용.ipynb  006_Gemini활용.ipynb  010_LangServe_Basic.py  011_LangSmith_Basic.ipynb
src/mylangchain_app/01RAG/: 010_RAG_Pipeline_0Basic.ipynb  010_RAG_Pipeline_1DocumentLoader_pdf.ipynb  010_RAG_Pipeline_1DocumentLoader_pdf_Upstage.ipynb  010_RAG_Pipeline_2.1TextSplitter.ipynb  010_RAG_Pipeline_3Embedding.ipynb  010_RAG_Pipeline_4Chroma_FAISS.ipynb  010_RAG_Pipeline_5Retriever.ipynb  011_RAG_DocxLoader_Faiss_Upstage.ipynb  011_RAG_WebBaseLoader_Upstage.ipynb
src/mylangchain_app/01RAG/faiss_db/: index.faiss  index.pkl
src/mylangchain_app/02Ollama/: 013_OllamaEmbeddings_Qwen.ipynb  013_Ollama_ llama3_활용.ipynb  013_Ollama_DeepSeek-r1_Basic.ipynb  013_Ollama_DeepSeek-r1_Qwen3연동.ipynb  ollama-rag-ver2.py  ollama-rag.py
src/mylangchain_app/03ChatBot/: 00chatbot_gradioBasic.ipynb  01chatbot_gradio_chatbot.ipynb  02chatbot_gradio_chatopenai.ipynb  03chatbot_gradio_rag.ipynb  04main_rag_faiss_gradio.py
src/mylangchain_app/data/: ai-terminology.txt  ai_technologies.csv  cafe_menu.txt  finance-terminology.txt  taxinfo.txt
src/mylangchain_app/과제/: 과제1.ipynb  과제2.ipynb  과제3.ipynb  과제4.ipynb
src/mylangchain_app/연습문제/: problem1-1_기본체인.ipynb  problem1-2_멀티체인.ipynb  problem1-3_FewShot.ipynb
(+1 files in other folders)
