[project]
name = "mylangchain-app"
version = "0.1.0"
description = ""
authors = [
    {name = "vega2kgkube",email = "vega2kgkube@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11,<=4.0"
dependencies = [
    "python-dotenv (>=1.1.1,<2.0.0)",
    "langchain (>=0.3.27,<0.4.0)",
    "langchain-openai (>=0.3.33,<0.4.0)",
    "gradio (>=5.46.0,<6.0.0)"
]

[tool.poetry]
packages = [{include = "mylangchain_app", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
